# logos-time-module

./: ARCHITECTURE.md  BirthrightClock.sol  Cargo.toml  INTEGRATION.md  README.md  TimeProtocol.sol  TimeToken.sol  WorkNFT.sol  birthright.rs  config.rs  error.rs  foundry.toml  index.ts  lib.rs  mint_trigger.rs  package.json  paymentWatcher.ts  service.rs  types.rs  types.ts  waku_listener.rs  workAgreement.ts
